--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,11 @@
     "default_popup": "popup-full.html",
     "default_title": "TriggerIncident"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "background": {
     "service_worker": "background.js"
   },
